# sword

./: README.md  docker-compose.yml  pyproject.toml
be_sword/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
be_sword/be_sword/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
be_sword/book/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
be_sword/book/management/commands/: seed.py
be_sword/book/migrations/: 0001_initial.py  0002_alter_book_id.py  0002_alter_book_isbn13.py  0003_alter_book_language_code_alter_book_original_title.py  0004_alter_book_book_id_alter_book_isbn13.py  0005_alter_book_authors_alter_book_isbn_alter_book_isbn13.py  0006_alter_book_authors.py  0007_remove_book_id_alter_book_book_id.py  0008_bookreserve.py  0009_enable_gin.py  0010_book_index_title_authors.py
be_sword/book/templates/admin/book/book/: change_list_object_tools.html  upload_file.html
be_sword/book/v1/: filters.py  serializers.py  urls.py  views.py
be_sword/scripts/: start-development.sh  start-from-k8s.sh  start-tests.sh
be_sword/tests/: conftest.py
be_sword/tests/be_sword/: test_sword_utils.py
be_sword/tests/book/: test_book_detail_view.py  test_book_reserve_view.py  test_book_view.py  test_utils.py  test_views.py
fe_sword/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
fe_sword/__tests__/: AdvancedButton.test.js  AdvancedSearchBar.test.js  App.test.js  BookDetail.test.js  BookReserveModal.test.js  Header.test.js  HomePage.test.js  Pagination.test.js  SearchBar.test.js
fe_sword/src/: App.js  api.js  setupMocks.js
fe_sword/src/components/: Header.css  (+9 more)
(+6 files in other folders)
